<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorSecondaryTemp"
                android:paddingEnd="@dimen/view_dimen_large"
                android:paddingStart="@dimen/view_dimen_large"
                android:paddingTop="@dimen/view_dimen_X_large"
                tools:context=".ui.fragments.PasswordResetFragment">

    <TextView
        android:id="@+id/textViewStatic_reset_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/view_dimen_X2_large"
        android:gravity="center"
        android:text="@string/header_resetPassword"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/font_X3_large"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/inputLayout_reset_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewStatic_reset_heading"
        android:layout_marginTop="@dimen/cardview_X2_small"
        android:textColorHint="@color/colorWhite"
        android:theme="@style/TextInputLayout">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/editText_reset_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/textEmail"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:textColor="@color/colorWhite"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/button_reset_resetPassword"
        android:layout_width="match_parent"
        android:layout_height="@dimen/widget_dimen_large"
        android:layout_below="@id/inputLayout_reset_email"
        android:layout_marginTop="@dimen/view_dimen_X_large"
        android:background="@color/colorWhite"
        android:text="@string/button_text_resetPassword"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/font_small"/>

</RelativeLayout>